--- a/css/variables.css
+++ b/css/variables.css
@@ -1,8 +1,8 @@
 :root {
-    --primary-color-dark: #004ba0;
-    --primary-color: #1976d2;
-    --header-color: white;
-    --primary-color-light: #63a4ff;
-    --body-special-color: #004ba0;
-    --gradient: 180deg, #FFD54F 5%, #FFA000 99%;
+    --primary-color-dark: rgb(192, 207, 167);
+    --primary-color: rgb(216, 229, 194);
+    --header-color: black;
+    --primary-color-light: rgb(177, 191, 155);
+    --body-special-color: rgb(70, 85, 45);
+    --gradient: 180deg, rgb(240, 207, 143) 5%, rgb(250, 249, 249) 99%;
 }
